# ren-os

./: .gitignore  CHANGELOG.md  LICENSE  LICENSES.md  README.md  REVIEW-v1.0-preship.md  REVIEW.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: sf-distribution.md  sf-feed.md  sf-lifecycle.md  sf-onboarding.md
.github/workflows/: promote-rc-draft.yml.template  release.yml  validate.yml  verify-migrations.yml
commands/: approve.md  reject.md  revert.md
docs/: ACTIVITY_FEED.md  RECOVERY.md  RELEASE_v1.0.0.md  RELEASING.md  SHIP_CHECKLIST.md  codex-read-proof-output.txt  codex-read-proof.md  data-flow.md  exit-criteria.md
docs/PATTERNS/: test-against-real-contract-instances.md
docs/plans/: 2026-05-30-solo-first-pivot.md
docs/superpowers/: 2026-05-31-v1-remediation-report.md
doctrine/: agent-orchestration.md  cadence-matrix.md  companions.md  conventions.md
feed/: README.md  __init__.py  bootstrap.py  config.py  format.py  identity_sync.py  io_github.py  reader.py  skip.py  writer.py
hooks/: hooks.json
lib/: __init__.py  ren_paths.py  sf_paths.py  skeleton.py
lib/adapter/: worker.py  (+2 more)
migrations/: README.md
raw/: karpathy-llm-wiki.md  web-survey-claude-code-plugins.md
scripts/: bump_version.py  codex_read_proof.sh  forbidden-substrings.txt  lint-shell-portability.py  lint-yaml-frontmatter.py  lint_no_dev_wiki_content.py  publish-checklist.md  publish.sh
tests/: test_obsidian_invariant.py  test_repo_hygiene.py
tour/: index.html
wiki/: codex-review.md  index.md  log.md
wiki-skeleton/: README.md  manifest.yaml
(+692 files in other folders)
